Save and display full size image instead of thumbnail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Receipt Scanner</string>
-    <string name="title_activity_receipt">ReceiptActivity</string>
+    <string name="title_activity_receipt">Scanned Receipt</string>
 </resources>
